# swagger-output.json
@@ -23,6 +23,10 @@
     {
       "name": "Mylist",
       "description": "찜 추가, 찜 취소, 찜한목록"
+    },
+    {
+      "name": "Search",
+      "description": "검색기능"
     }
   ],
   "schemes": [
@@ -436,6 +440,29 @@
           },
           "401": {
             "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/movie/search": {
+      "get": {
+        "tags": [
+          "Search"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "title",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       }
